style: fix table spacing

--- a/src/components/TradeComponents/TradePriceBtcTable/TradePriceBtcTable.css
+++ b/src/components/TradeComponents/TradePriceBtcTable/TradePriceBtcTable.css
@@ -56,7 +56,6 @@
 }
 
 .trade_price_btc_table table td {
-  text-align: center;
   margin: 6px 0;
   padding-left: 20px;
   padding-top: 5px;
